--- a/public/styles/fonts/fonts.css
+++ b/public/styles/fonts/fonts.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900');
-p, a, h1, h2, h3 {
-  font-family: 'Lato', sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,700,900');
+p, a, h1, h2, h3, h4, h5, h6, button, p, a, li {
+  font-family: 'Open Sans', sans-serif;
 }
