--- a/public/views/home.html
+++ b/public/views/home.html
@@ -19,10 +19,35 @@
 <section class="services">
   <div class="container">
     <div class="row">
-      <h1 class="section-title-grey">Our Services</h1>
+      <h1 class="section-title-grey">OUR SERVICES</h1>
       <hr class="section-hr-grey">
-      <div class="services-pack">
-
+      <div class="col-sm-1"></div>
+      <div class="col-sm-10 services-pack">
+        <h2>Our Services will give you blah blah, peice of mind, blah blah, maximum comfort, and everything nice in Arizona.</h2>
+        <div class="row">
+          <div class="col-md-6 service-title">
+            <i class="fa fa-television techicon" aria-hidden="true"></i>
+            <h3>TV Installation</h3>
+            <p>We do it all: Wall-mount flat panel televisions, install speakers and wiring, install rack systems, install security cameras, conceal wiring inside the walls, set-up and calibrate televisions and sound systems, programming on custom remote controls, and much more…</p>
+          </div>
+          <div class="col-md-6 service-title">
+            <i class="fa fa-music techicon" aria-hidden="true"></i>
+            <h3>Media Rooms & Surround Sound Systems</h3>
+            <p>There are many variables that can make or break or theater or media room. We can design rooms based on acoustics, aesthetics, and audio video needs. We work with architects and interior designers to make sure that every detail is perfect.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6 service-title">
+            <i class="fa fa-shield techicon" aria-hidden="true"></i>
+            <h3>Security Systems</h3>
+            <p>Home security should be a high priority for any home owner whether you are married, a single parent, or simply need to add an appropriate alarm system for your family’s elders.</p>
+          </div>
+          <div class="col-md-6 service-title">
+            <i class="fa fa-video-camera techicon" aria-hidden="true"></i>
+            <h3>Cameras & Surveillance</h3>
+            <p>The increase in crime rates makes it necessary that each one of us take precautions of our own to keep our home and families safe. The easy and affordable access to technology has brought cameras and surveillance systems within reach for everyone.</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -37,5 +62,48 @@
 
 </section>
 <section class="our-partners">
-
+  <div class="container">
+    <div class="row">
+      <h2 class="section-title-grey">OUR PARTNERS</h2>
+      <hr class="section-hr-grey">
+      <ng-owl-carousel id='products-carousel' class="owl-theme" owl-items="owlitems" owl-properties="owlpropertiesPartners">
+        <div class="item">
+          <img src="img/placeholder.jpg" alt="Strong Tower Installations" style='height:80px'>
+        </div>
+        <div class="item">
+          <img src="img/placeholder.jpg" alt="Strong Tower Installations" style='height:80px'>
+        </div>
+        <div class="item">
+          <img src="img/placeholder.jpg" alt="Strong Tower Installations" style='height:80px'>
+        </div>
+        <div class="item">
+          <img src="img/placeholder.jpg" alt="Strong Tower Installations" style='height:80px'>
+        </div>
+        <div class="item">
+          <img src="img/placeholder.jpg" alt="Strong Tower Installations" style='height:80px'>
+        </div>
+        <div class="item">
+          <img src="img/placeholder.jpg" alt="Strong Tower Installations" style='height:80px'>
+        </div>
+        <div class="item">
+          <img src="img/placeholder.jpg" alt="Strong Tower Installations" style='height:80px'>
+        </div>
+        <div class="item">
+          <img src="img/placeholder.jpg" alt="Strong Tower Installations" style='height:80px'>
+        </div>
+        <div class="item">
+          <img src="img/placeholder.jpg" alt="Strong Tower Installations" style='height:80px'>
+        </div>
+        <div class="item">
+          <img src="img/placeholder.jpg" alt="Strong Tower Installations" style='height:80px'>
+        </div>
+        <div class="item">
+          <img src="img/placeholder.jpg" alt="Strong Tower Installations" style='height:80px'>
+        </div>
+        <div class="item">
+          <img src="img/placeholder.jpg" alt="Strong Tower Installations" style='height:80px'>
+        </div>
+      </ng-owl-carousel>
+    </div>
+  </div>
 </section>
