--- a/public/views/services.html
+++ b/public/views/services.html
@@ -1,3 +1,12 @@
+<section class='hero'>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <h1>WE LOVE WHAT WE DO</h1>
+      </div>
+    </div>
+  </div>
+</section>
 <section class="services">
   <div class="container">
     <div class="row">
