--- a/public/styles/views/main.scss
+++ b/public/styles/views/main.scss
@@ -6,11 +6,16 @@
     box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   background: #f4f4f4;
   color: #333;
   line-height: 24px;
   font-size: 14px;
+  overflow-x: hidden;
 }
 
 header {
@@ -27,6 +32,10 @@ a {
 
 a, a:hover, a:active, a:visited, a:focus {
     text-decoration:none;
+}
+
+hr {
+  border-top: 3px solid #a7090a!important;
 }
 
 .container {
@@ -423,6 +432,14 @@ a, a:hover, a:active, a:visited, a:focus {
   margin-top: 12px;
 }
 
+#products-carousel .item {
+  height: 70px;
+}
+
+#products-carousel .item img {
+  height: 32px;
+  width: auto;
+}
 
 
 
@@ -553,9 +570,53 @@ footer .container {
 }
 
 
+.fb-like {
+  margin-top: 5px;
+  margin-right: 10px;
+  margin: 5px 10px 0 10px;
+}
+
+
+.thumbtack-mini img {
+  height: 20px;
+}
+
+
 
 
 // @ media querys
+
+@media (max-width: 767px) {
+  header {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+  }
+  .navbar-main {
+    height: auto;
+  }
+  .navbar-main img {
+    height: 50px;
+  }
+  .navigation {
+    display: none;
+  }
+  .contact-bar {
+    width: 100%;
+    height: 30px;
+    padding-top: 6px;
+  }
+  .main-wrapper {
+    margin-top: 90px;
+  }
+  .hamburger-btn {
+    display: block;
+  }
+}
+.footer-social {
+  padding-top: 20px;
+}
 
 
 @media only screen and (min-width: 320px) {
@@ -607,6 +668,9 @@ footer .container {
     display: block;
     margin-top: 8px;
   }
+  #products-carousel .item img {
+    height: 50px;
+  }
 }
 
 @media only screen and (min-width: 992px) {
@@ -627,37 +691,4 @@ footer .container {
       width: 1200px;
       padding: 0;
   }
-}
-
-
-@media (max-width: 767px) {
-  header {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-  }
-  .navbar-main {
-    height: auto;
-  }
-  .navbar-main img {
-    height: 50px;
-  }
-  .navigation {
-    display: none;
-  }
-  .contact-bar {
-    width: 100%;
-    height: 30px;
-    padding-top: 6px;
-  }
-  .main-wrapper {
-    margin-top: 90px;
-  }
-  .hamburger-btn {
-    display: block;
-  }
-}
-.footer-social {
-  padding-top: 20px;
 }
