--- a/public/views/about.html
+++ b/public/views/about.html
@@ -13,6 +13,16 @@
       <h1 class="section-title-grey">OUR MISSION</h1>
       <hr class="section-hr-grey">
     </div>
+    <div class="row">
+      <div class="col-sm-offset-1 col-md-2 quote">
+        <p>"Technology is our passion, customization is our specialty."</p>
+      </div>
+        <div class="col-sm-6 col-sm-offset-1">
+          <p><span class="first-letter">H</span>ello, we are Strong Tower Installations. We are a group of highly talented individuals specialized in creating innovative home theatre and security solutions. Our mission is to stay true to the nature of quality sound and security as an evidence-driven methodology to create user-centered products while taking advantage of our technical capabilities.</p>
+          <p>We’re locally owned & operated out of Gilbert, Arizona. Our founders live and work in Arizona. When you call us, you’ll get a live person. Not able to call? No worries, we’ve got 24/7 live SMS (text) support too.</p>
+          <p>Technology is our passion, customization is our specialty.</p>
+        </div>
+    </div>
   </div>
 </section>
 <section class="services">
