--- a/public/views/services.html
+++ b/public/views/services.html
@@ -91,3 +91,52 @@
     </div>
   </div>
 </section>
+<section class="our-partners">
+  <div class="container">
+    <div class="row">
+      <h2 class="section-title-grey">OUR PARTNERS</h2>
+      <hr class="section-hr-grey">
+      <ng-owl-carousel id='products-carousel' class="owl-theme" owl-items="owlitems" owl-properties="owlpropertiesPartners">
+        <div class="item">
+          <img src="img/partners/2gig_logo.jpg" alt="2gig_logo">
+        </div>
+        <div class="item">
+          <img src="img/partners/alarmdotcom_logo.jpg" alt="alarmdotcom_logo">
+        </div>
+        <div class="item">
+          <img src="img/partners/cctvcore_logo.jpg" alt="cctvcore_logo">
+        </div>
+        <div class="item">
+          <img src="img/partners/denom_logo.jpg" alt="denom_logo">
+        </div>
+        <div class="item">
+          <img src="img/partners/elura_logo.jpg" alt="elura_logo">
+        </div>
+        <div class="item">
+          <img src="img/partners/honeywell_logo.jpg" alt="honeywell_logo">
+        </div>
+        <div class="item">
+          <img src="img/partners/jamo_logo.jpg" alt="jamo_logo">
+        </div>
+        <div class="item">
+          <img src="img/partners/mountainwest_logo.jpg" alt="mountainwest_logo">
+        </div>
+        <div class="item">
+          <img src="img/partners/onkyo_logo.jpg" alt="onkyo_logo">
+        </div>
+        <div class="item">
+          <img src="img/partners/ring_logo.jpg" alt="ring_logo">
+        </div>
+        <div class="item">
+          <img src="img/partners/samsung_logo.jpg" alt="samsung_logo">
+        </div>
+        <div class="item">
+          <img src="img/partners/wave_logo.jpg" alt="wave_logo">
+        </div>
+        <div class="item">
+          <img src="img/partners/yamaha_logo.jpg" alt="yamaha_logo">
+        </div>
+      </ng-owl-carousel>
+    </div>
+  </div>
+</section>
