contact btn and form

--- a/public/views/contact.html
+++ b/public/views/contact.html
@@ -7,11 +7,37 @@
     </div>
   </div>
 </section>
-<section class="services">
+<!-- <section class="services">
   <div class="container">
     <div class="row">
       <h1 class="section-title-grey">CONTACT FORM</h1>
       <hr class="section-hr-grey">
     </div>
   </div>
-</section>
+</section> -->
+<div id="form-one-holder" class="form-one-holder">
+  <h2 class="sectiom-title-grey">your message</h2>
+  <hr class="sectiom-hr-grey">
+  <form id="hi-form" method="POST" action="http://formspree.io/jesse@strongtowersecurity.co">
+    <div class="col-xs-12 col-sm-6">
+      <div class="form-group">
+        <label for="name">Name*</label>
+        <input type="text" class="form-control" id="name" name="Name" placeholder="Name" required="">
+      </div>
+    </div>
+    <div class="col-xs-12 col-sm-6">
+      <div class="form-group">
+        <label for="email">Email Address*</label>
+        <input type="text" class="form-control" id="email" name="Email" placeholder="Email Address" required="">
+      </div>
+    </div>
+    <div class="col-xs-12 col-sm-12">
+      <div class="form-group">
+        <label for="message">Message*</label>
+        <textarea form="hi-form" class="form-control" rows="5" id="message" name="message" placeholder="Your message" required="">
+        </textarea>
+      </div>
+    </div>
+    <button class="" type="submit">Send Message</button>
+  </form>
+</div>
