contact form complete

--- a/public/views/testimonials.html
+++ b/public/views/testimonials.html
@@ -13,9 +13,33 @@
       <h1 class="section-title-grey">WHAT PEOPLE ARE SAYING</h1>
       <hr class="section-hr-grey">
       <div class="review1">
-        <div class="widget ng-scope" id="tt-review-widget-one"> <img ng-src="https://static.thumbtackstatic.com/media/logos/thumbtack/wordmark.svg" alt="Thumbtack" src="https://static.thumbtackstatic.com/media/logos/thumbtack/wordmark.svg"> <div id="tt-dynamic"> <div class="tt-left"> <img src="https://static.thumbtackstatic.com/media/primo/icons/user/50x50.png"></div><div class="tt-right"> <div class="tt-name">Jeremy L.</div> <div class="tt-stars"> <img src="https://static.thumbtackstatic.com/media/pages/profile/standard-widgets/review-widget/orange_star.svg"> <img src="https://static.thumbtackstatic.com/media/pages/profile/standard-widgets/review-widget/orange_star.svg"> <img src="https://static.thumbtackstatic.com/media/pages/profile/standard-widgets/review-widget/orange_star.svg"> <img src="https://static.thumbtackstatic.com/media/pages/profile/standard-widgets/review-widget/orange_star.svg"> <img src="https://static.thumbtackstatic.com/media/pages/profile/standard-widgets/review-widget/orange_star.svg">  <span>6d ago</span> </div> <p> Jesse and his team were timely and profession. He had a clear understanding of everything I asked for, and was able to give me a reasonable quote, along with worthwhile suggestions. His prices were well below my expectations, and the quality well above! </p> <a target="_blank" href="https://www.thumbtack.com/-Gilbert-AZ/service/2365712">See all reviews</a></div><br> </div> </div><script src='https://www.thumbtack.com/profile/widgets/scripts/?service_id=VdWDwQ9cRc4Uaw&widget_id=review&type=one'></script>
+        <div class="widget ng-scope" id="tt-review-widget-one">
+          <img ng-src="https://static.thumbtackstatic.com/media/logos/thumbtack/wordmark.svg" alt="Thumbtack" src="https://static.thumbtackstatic.com/media/logos/thumbtack/wordmark.svg">
+          <div id="tt-dynamic">
+            <div class="tt-left">
+              <img src="https://static.thumbtackstatic.com/media/primo/icons/user/50x50.png">
+            </div>
+            <div class="tt-right">
+              <div class="tt-name">Jeremy L.
+              </div>
+              <div class="tt-stars">
+                <img src="https://static.thumbtackstatic.com/media/pages/profile/standard-widgets/review-widget/orange_star.svg">
+                <img src="https://static.thumbtackstatic.com/media/pages/profile/standard-widgets/review-widget/orange_star.svg">
+                <img src="https://static.thumbtackstatic.com/media/pages/profile/standard-widgets/review-widget/orange_star.svg">
+                <img src="https://static.thumbtackstatic.com/media/pages/profile/standard-widgets/review-widget/orange_star.svg">
+                <img src="https://static.thumbtackstatic.com/media/pages/profile/standard-widgets/review-widget/orange_star.svg">
+                <span>6 ago</span>
+              </div>
+              <p> Jesse and his team were timely and profession. He had a clear understanding of everything I asked for, and was able to give me a reasonable quote, along with worthwhile suggestions. His prices were well below my expectations, and the quality well above!
+              </p>
+              <a target="_blank" href="https://www.thumbtack.com/-Gilbert-AZ/service/2365712">See all reviews
+              </a>
+            </div>
+            <br>
+          </div>
+        </div>
+        <script src='https://www.thumbtack.com/profile/widgets/scripts/?service_id=VdWDwQ9cRc4Uaw&widget_id=review&type=one'></script>
       </div>
-        
       </div>
     <div class="row">
 
