--- a/public/styles/views/main.scss
+++ b/public/styles/views/main.scss
@@ -124,7 +124,7 @@ hr {
   font-size: 15px;
   -webkit-transition: .25s;
   transition: .25s;
-  border-bottom: 2px solid #ffffff;
+  border-bottom: 3px solid #ffffff;
   margin-bottom: 12px;
   font-weight: 600;
   letter-spacing: 1px;
@@ -136,30 +136,30 @@ hr {
 }
 
 .navigation li.active {
-  border-bottom: 2px solid #a7090a;
+  border-bottom: 3px solid #a7090a;
   color: #000;
 }
 
 .navigation li:hover {
-  border-bottom: 2px solid #a7090a;
+  border-bottom: 3px solid #a7090a;
   color: #000;
 }
 
 .navigation li:last-child {
   padding: 6px;
-  border: 2px solid #7f7f7f;
+  border: 3px solid #7f7f7f;
   border-radius: 2px;
   text-align: center;
 }
 
 .navigation li:last-child:hover {
-  border: 2px solid #a7090a;
+  border: 3px solid #a7090a;
   color: #fff;
   background: #a7090a;
 }
 
 .navigation li.active:last-child {
-  border: 2px solid #a7090a;
+  border: 3px solid #a7090a;
   color: #fff;
   background: #a7090a;
 }
@@ -530,6 +530,40 @@ justify-content: center;
 }
 
 // contact us
+.contact-body .container {
+  padding: 100px 0;
+  background-color: #fff;
+}
+@media only screen and (min-width: 320px) {
+
+  .contact-body .container {
+    padding: 30px 0;
+    background-color: #fff;
+  }
+}
+
+@media only screen and (min-width: 480px) {
+
+  .contact-body .container {
+    padding: 45px 0;
+    background-color: #fff;
+  }
+}
+@media only screen and (min-width: 768px) {
+
+  .contact-body .container {
+    padding: 45px 0;
+    background-color: #fff;
+  }
+}
+@media only screen and (min-width: 992px) {
+
+  .contact-body .container {
+    padding: 100px 0;
+    background-color: #fff;
+  }
+}
+
 .form-one-holder, .form-two-holder {
     clear: both;
     float: left;
@@ -537,6 +571,16 @@ justify-content: center;
     width: 100%;
     display: block;
     padding-top: 25px;
+}
+
+.form-one-holder form button, .form-one-holder form button.pink-orange {
+    background: #a7090a;
+    color: #FFF;
+}
+
+.form-one-holder form button:hover, .form-two-holder .submitbutton:hover {
+    box-shadow: 0 5px 15px 0 rgba(0,0,0,.5);
+    text-decoration: none;
 }
 
 .sectiom-title-grey {
@@ -708,14 +752,12 @@ footer .container {
     letter-spacing: 2px;
 }
 .footer-social .sociallinks li a {
-  font-size: 18px;
+  font-size: 19px;
 }
 
 
 .fb-like {
-  margin-top: 5px;
-  margin-right: 10px;
-  margin: 5px 10px 0 10px;
+  margin: 5px 10px 0 2px;
 }
 
 
