--- a/public/styles/views/main.scss
+++ b/public/styles/views/main.scss
@@ -486,13 +486,85 @@ hr {
   width: auto;
 }
 
+// services
+.mobile-layout {
+  display: block;
+}
+.desktop-layout {
+    display: none;
+}
+@media only screen and (min-width: 320px) {
+  .mobile-layout {
+    display: block;
+  }
+  .desktop-layout {
+    display: none;
+}
+}
+@media only screen and (min-width: 480px) {
+  .mobile-layout {
+    display: block;
+  }
+  .desktop-layout {
+    display: none;
+}
+
+}
+@media only screen and (min-width: 768px) {
+  .mobile-layout {
+    display: none;
+  }
+  .desktop-layout {
+    display: block;
+}
+
+}
+@media only screen and (min-width: 992px) {
+  .mobile-layout {
+    display: none;
+  }
+  .desktop-layout {
+    display: block;
+}
+}
+@media only screen and (min-width: 1200px) {
+  .mobile-layout {
+    display: none;
+  }
+
+}
+.desktile {
+    background-color: #fff;
+    border-bottom: 2px solid #f4f4f4;
+    padding: 100px 0;
+    display: block;
+    cursor: pointer;
+    position: relative;
+}
+.odd {
+    text-align: right;
+}
+
+.desktile img {
+    margin-top: 30px;
+}
 // testimonials
 .review1 {
   display: flex;
 justify-content: center;
 
 }
-
+.mobile-tile {
+    clear: both;
+    float: left;
+    width: 100%;
+    padding: 50px 20px;
+    background-color: #fff;
+    border-bottom: 1px solid #dedede;
+    display: block;
+    cursor: pointer;
+    position: relative;
+}
 // about us
 
 .first-letter {
