--- a/public/views/services.html
+++ b/public/views/services.html
@@ -7,7 +7,7 @@
     </div>
   </div>
 </section>
-<section class="services">
+<!-- <section class="services">
   <div class="container">
     <div class="row">
       <h1 class="section-title-grey">TV Installation</h1>
@@ -90,6 +90,194 @@
       </div>
     </div>
   </div>
+</section> -->
+<section id="work-section" class="work-section">
+  <div class="container mobile-layout">
+    <div class="row">
+      <div class="col-sm-2>">
+</div>
+
+<div class="col-sm-8 mobile-tile odd">
+  <div class="col-sm-12">
+    <img class="img-responsive" src="img/placeholder.jpg" alt="Strong Tower Installations">
+  </div>
+  <div class="col-sm-12">
+    <h1>TV Installation</h1>
+    <p>We do it all: Wall-mount flat panel televisions, install speakers and wiring, install rack systems, install security cameras, conceal wiring inside the walls, set-up and calibrate televisions and sound systems, programming on custom remote controls, and much more…We do it all: Wall-mount flat panel televisions, install speakers and wiring, install rack systems, install security cameras, conceal wiring inside the walls, set-up and calibrate televisions and sound systems, programming on custom remote controls, and much more…</p>
+    <ul>
+      <li>Our TV Installation will give you blah blah, peice of mind, blah blah, maximum comfort, and everything nice in Arizona.</li>
+    </ul>
+    <div class="clearfix">
+</div>
+</div>
+</div>
+
+
+<div class="col-sm-2>">
+</div>
+</div>
+<div class="row">
+<div class="col-sm-2>">
+</div>
+
+
+<div class="col-sm-8 mobile-tile">
+  <div class="col-sm-12">
+    <img class="img-responsive" src="img/placeholder.jpg" alt="Strong Tower Installations">
+  </div>
+  <div class="col-sm-12">
+    <h1>Media Rooms & Surround Sound Systems</h1>
+    <p>There are many variables that can make or break or theater or media room. We can design rooms based on acoustics, aesthetics, and audio video needs. We work with architects and interior designers to make sure that every detail is perfect.There are many variables that can make or break or theater or media room. We can design rooms based on acoustics, aesthetics, and audio video needs. We work with architects and interior designers to make sure that every detail is perfect.</p>
+    <ul>
+      <li>Our Media Rooms & Surround Sound Systems will give you blah blah, peice of mind, blah blah, maximum comfort, and everything nice in Arizona.</li>
+    </ul>
+    <div class="clearfix">
+</div>
+</div>
+</div>
+
+
+<div class="col-sm-2>">
+</div>
+</div>
+<div class="row">
+<div class="col-sm-2>">
+</div>
+
+
+<div class="col-sm-8 mobile-tile odd">
+  <div class="col-sm-12">
+    <img class="img-responsive" src="img/placeholder.jpg" alt="Strong Tower Installations">
+  </div>
+  <div class="col-sm-12">
+    <h1>Home security</h1>
+    <p>Home security should be a high priority for any home owner whether you are married, a single parent, or simply need to add an appropriate alarm system for your family’s elders.Home security should be a high priority for any home owner whether you are married, a single parent, or simply need to add an appropriate alarm system for your family’s elders.</p>
+    <ul>
+      <li>Our Home security will give you blah blah, peice of mind, blah blah, maximum comfort, and everything nice in Arizona.</li>
+    </ul>
+    <div class="clearfix">
+</div>
+</div>
+</div>
+
+
+<div class="col-sm-2>">
+</div>
+</div>
+<div class="row">
+<div class="col-sm-2>">
+</div>
+
+
+<div class="col-sm-8 mobile-tile">
+  <div class="col-sm-12">
+    <img class="img-responsive" src="img/placeholder.jpg" alt="Strong Tower Installations">
+  </div>
+  <div class="col-sm-12">
+    <h1>Cameras & Surveillance</h1>
+    <p>The increase in crime rates makes it necessary that each one of us take precautions of our own to keep our home and families safe. The easy and affordable access to technology has brought cameras and surveillance systems within reach for everyone.The increase in crime rates makes it necessary that each one of us take precautions of our own to keep our home and families safe. The easy and affordable access to technology has brought cameras and surveillance systems within reach for everyone.</p>
+    <ul>
+      <li>Our Cameras & Surveillance will give you blah blah, peice of mind, blah blah, maximum comfort, and everything nice in Arizona.</li>
+    </ul>
+    <div class="clearfix">
+</div>
+</div>
+</div>
+
+
+
+<div class="col-sm-2>">
+
+</div>
+</div>
+</div>
+
+
+
+
+
+
+<div class="container desktop-layout">
+
+
+
+<div class="row desktile">
+<div class="col-sm-1">
+</div>
+<div class="col-sm-6">
+  <img class="img-responsive" src="img/placeholder.jpg" alt="Strong Tower Installations">
+</div>
+<div class="col-sm-4">
+  <h1>TV Installation</h1>
+  <p>We do it all: Wall-mount flat panel televisions, install speakers and wiring, install rack systems, install security cameras, conceal wiring inside the walls, set-up and calibrate televisions and sound systems, programming on custom remote controls, and much more…We do it all: Wall-mount flat panel televisions, install speakers and wiring, install rack systems, install security cameras, conceal wiring inside the walls, set-up and calibrate televisions and sound systems, programming on custom remote controls, and much more…</p>
+  <ul>
+    <li>Our TV Installation will give you blah blah, peice of mind, blah blah, maximum comfort, and everything nice in Arizona.</li>
+  </ul>
+</div>
+<div class="col-sm-1">
+</div>
+</div>
+
+
+<div class="row desktile odd">
+  <div class="col-sm-1">
+</div>
+<div class="col-sm-4">
+  <h1>Media Rooms & Surround Sound Systems</h1>
+  <p>There are many variables that can make or break or theater or media room. We can design rooms based on acoustics, aesthetics, and audio video needs. We work with architects and interior designers to make sure that every detail is perfect.There are many variables that can make or break or theater or media room. We can design rooms based on acoustics, aesthetics, and audio video needs. We work with architects and interior designers to make sure that every detail is perfect.</p>
+  <ul>
+    <li>Our Media Rooms & Surround Sound Systems will give you blah blah, peice of mind, blah blah, maximum comfort, and everything nice in Arizona.</li>
+  </ul>
+</div>
+<div class="col-sm-6">
+  <img class="img-responsive" src="img/placeholder.jpg" alt="Strong Tower Installations">
+</div>
+<div class="col-sm-1">
+</div>
+</div>
+
+
+<div class="row desktile">
+  <div class="col-sm-1">
+</div>
+<div class="col-sm-6">
+  <img class="img-responsive" src="img/placeholder.jpg" alt="Strong Tower Installations">
+</div>
+<div class="col-sm-4">
+  <h1>Home security</h1>
+  <p>Home security should be a high priority for any home owner whether you are married, a single parent, or simply need to add an appropriate alarm system for your family’s elders.Home security should be a high priority for any home owner whether you are married, a single parent, or simply need to add an appropriate alarm system for your family’s elders.</p>
+  <ul>
+    <li>Our Home security will give you blah blah, peice of mind, blah blah, maximum comfort, and everything nice in Arizona.</li>
+  </ul>
+</div>
+<div class="col-sm-1">
+</div>
+</div>
+
+
+<div class="row desktile odd">
+  <div class="col-sm-1">
+</div>
+<div class="col-sm-4">
+  <h1>Cameras & Surveillance</h1>
+  <p>The increase in crime rates makes it necessary that each one of us take precautions of our own to keep our home and families safe. The easy and affordable access to technology has brought cameras and surveillance systems within reach for everyone.The increase in crime rates makes it necessary that each one of us take precautions of our own to keep our home and families safe. The easy and affordable access to technology has brought cameras and surveillance systems within reach for everyone.</p>
+  <ul>
+    <li>Our Cameras & Surveillance will give you blah blah, peice of mind, blah blah, maximum comfort, and everything nice in Arizona.</li>
+  </ul>
+</div>
+<div class="col-sm-6">
+  <img class="img-responsive" src="img/placeholder.jpg" alt="Strong Tower Installations">
+</div>
+<div class="col-sm-1">
+</div>
+</div>
+
+
+
+</div>
+
+
+
 </section>
 <section class="our-partners">
   <div class="container">
