removed images, changed logo, made a temporary image for construction

--- a/public/styles/views/main.scss
+++ b/public/styles/views/main.scss
@@ -1,3 +1,13 @@
+.temp {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+.temp img {
+  height: 200px;
+}
+
 // global
 
 * {
