--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,3 +1,12 @@
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.9&appId=902009893274771";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 <ng-owl-carousel id='main-carousel' class="owl-theme" owl-items="owlitems" owl-properties="owlproperties">
   <div class="item">
     <img src="img/placeholder.jpg" alt="Strong Tower Installations">
@@ -73,11 +82,19 @@
 <section class="showroom">
 
 </section>
-<section class="testimonials">
-
-</section>
-<section class="recent-socialmedia">
-
+<section class="services">
+  <div class="container">
+    <div class="row">
+      <h2 class="section-title-grey">SOCIAL MEDIA</h2>
+      <hr class="section-hr-grey">
+      <div class="col-sm-1"></div>
+      <div class="col-sm-10 services-pack plugin-container">
+        <div class="fbplugin">
+          <div class="fb-page" data-href="https://www.facebook.com/strongtowerinstallations/" data-tabs="timeline" data-small-header="true" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/strongtowerinstallations/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/strongtowerinstallations/">Strong Tower Installations</a></blockquote></div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 <section class="our-partners">
   <div class="container">
