--- a/public/views/home.html
+++ b/public/views/home.html
@@ -9,19 +9,29 @@
 
 <ng-owl-carousel id='main-carousel' class="owl-theme" owl-items="owlitems" owl-properties="owlproperties">
   <div class="item">
-    <img src="img/placeholder.jpg" alt="Strong Tower Installations">
+    <img src="img/stocks/relaxingguy.jpg" alt="Strong Tower Installations">
+    <div class="carousel-content">
+    </div>
   </div>
   <div class="item">
-    <img src="img/placeholder.jpg" alt="Strong Tower Installations">
+    <img src="img/stocks/home_automation_lady.jpg" alt="Strong Tower Installations">
+    <div class="carousel-content">
+    </div>
   </div>
   <div class="item">
-    <img src="img/placeholder.jpg" alt="Strong Tower Installations">
+    <img src="img/stocks/security_monitoring_pc.jpg" alt="Strong Tower Installations">
+    <div class="carousel-content">
+    </div>
   </div>
   <div class="item">
-    <img src="img/placeholder.jpg" alt="Strong Tower Installations">
+    <img src="img/stocks/hometheatre_1.jpg" alt="Strong Tower Installations">
+    <div class="carousel-content">
+    </div>
   </div>
   <div class="item">
-    <img src="img/placeholder.jpg" alt="Strong Tower Installations">
+    <img src="img/stocks/home_automation.jpg" alt="Strong Tower Installations">
+    <div class="carousel-content">
+    </div>
   </div>
 </ng-owl-carousel>
 
@@ -38,13 +48,13 @@
             <i class="fa fa-television techicon" aria-hidden="true"></i>
             <h3>TV Installation</h3>
             <p>We do it all: Wall-mount flat panel televisions, install speakers and wiring, install rack systems, install security cameras, conceal wiring inside the walls, set-up and calibrate televisions and sound systems, programming on custom remote controls, and much more…</p>
-            <button>LEARN MORE</button>
+            <button ui-sref="services({scrollTo: 'tvinstall'})">LEARN MORE</button>
           </div>
           <div class="col-md-6 service-title">
             <i class="fa fa-music techicon" aria-hidden="true"></i>
             <h3>Media Rooms & Surround Sound Systems</h3>
             <p>There are many variables that can make or break or theater or media room. We can design rooms based on acoustics, aesthetics, and audio video needs. We work with architects and interior designers to make sure that every detail is perfect.</p>
-            <button>LEARN MORE</button>
+            <button ui-sref="services({scrollTo: 'media'})">LEARN MORE</button>
           </div>
         </div>
         <div class="row">
@@ -52,27 +62,27 @@
             <i class="fa fa-shield techicon" aria-hidden="true"></i>
             <h3>Security Systems</h3>
             <p>Home security should be a high priority for any home owner whether you are married, a single parent, or simply need to add an appropriate alarm system for your family’s elders.</p>
-            <button>LEARN MORE</button>
+            <button ui-sref="services({scrollTo: 'security'})">LEARN MORE</button>
           </div>
           <div class="col-md-6 service-title">
             <i class="fa fa-video-camera techicon" aria-hidden="true"></i>
             <h3>Cameras & Surveillance</h3>
             <p>The increase in crime rates makes it necessary that each one of us take precautions of our own to keep our home and families safe. The easy and affordable access to technology has brought cameras and surveillance systems within reach for everyone.</p>
-            <button>LEARN MORE</button>
+            <button ui-sref="services({scrollTo: 'cameras'})">LEARN MORE</button>
           </div>
         </div>
         <div class="col-md-6 service-title">
           <i class="fa fa-wifi techicon" aria-hidden="true"></i>
           <h3>Wifi Solutions</h3>
           <p>Relying on a single router is like asking a loud speaker in your living room to provide great sound throughout your home. It’s simple physics: WiFi waves don’t go through walls well and have an even harder time climbing stairs. Ever tried to stream a show from your bedroom when your router’s in the office downstairs? It’s a buffering nightmare.</p>
-          <button>LEARN MORE</button>
+          <button ui-sref="services({scrollTo: 'wifi'})">LEARN MORE</button>
         </div>
         <div class="col-md-6 service-title">
           <i class="fa fa-magic techicon" aria-hidden="true"></i>
           <h3>Home Automation</h3>
           <p>The term home automation means exactly that—automating the home and related household activities. This term encompasses a whole range of products and services ranging from the automation of lights in your home to the installation of a state-of-the art security system.
           </p>
-          <button>LEARN MORE</button>
+          <button ui-sref="services({scrollTo: 'automation'})">LEARN MORE</button>
         </div>
       </div>
       </div>
@@ -90,7 +100,7 @@
       <div class="col-sm-1"></div>
       <div class="col-sm-10 services-pack plugin-container">
         <div class="fbplugin">
-          <div class="fb-page" data-href="https://www.facebook.com/strongtowerinstallations/" data-tabs="timeline" data-small-header="true" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/strongtowerinstallations/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/strongtowerinstallations/">Strong Tower Installations</a></blockquote></div>
+          <div class="fb-page" data-href="https://www.facebook.com/strongtowerinstallations/" data-tabs="timeline" data-width="500" data-small-header="true" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/strongtowerinstallations/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/strongtowerinstallations/">Strong Tower Installations</a></blockquote></div>
         </div>
       </div>
     </div>
