--- a/public/views/services.html
+++ b/public/views/services.html
@@ -1,8 +1,11 @@
-<section class='hero'>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <h1>WE LOVE WHAT WE DO</h1>
+
+<section class='hero services-img'>
+  <div class="hero-filter">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <h1>WE LOVE WHAT WE DO</h1>
+        </div>
       </div>
     </div>
   </div>
@@ -98,7 +101,7 @@
       </div>
       <div class="col-sm-8 mobile-tile odd">
         <div class="col-sm-12">
-          <img class="img-responsive" src="img/placeholder.jpg" alt="Strong Tower Installations">
+          <img class="img-responsive" src="img/stocks/tvmount_install.jpg" alt="Strong Tower Installations">
         </div>
         <div class="col-sm-12">
           <h1>TV Installation</h1>
@@ -119,7 +122,7 @@
       </div>
       <div class="col-sm-8 mobile-tile">
         <div class="col-sm-12">
-          <img class="img-responsive" src="img/placeholder.jpg" alt="Strong Tower Installations">
+          <img class="img-responsive" src="img/stocks/hometheater_2.jpg" alt="Strong Tower Installations">
         </div>
         <div class="col-sm-12">
           <h1>Media Rooms & Surround Sound Systems</h1>
@@ -139,7 +142,7 @@
       </div>
       <div class="col-sm-8 mobile-tile odd">
         <div class="col-sm-12">
-          <img class="img-responsive" src="img/placeholder.jpg" alt="Strong Tower Installations">
+          <img class="img-responsive" src="img/stocks/security_monitoring_app.jpg" alt="Strong Tower Installations">
         </div>
         <div class="col-sm-12">
           <h1>Home security</h1>
@@ -159,7 +162,7 @@
       </div>
       <div class="col-sm-8 mobile-tile">
         <div class="col-sm-12">
-          <img class="img-responsive" src="img/placeholder.jpg" alt="Strong Tower Installations">
+          <img class="img-responsive" src="img/stocks/cameras_sensors.jpg" alt="Strong Tower Installations">
         </div>
         <div class="col-sm-12">
           <h1>Cameras & Surveillance</h1>
@@ -179,7 +182,7 @@
       </div>
       <div class="col-sm-8 mobile-tile odd">
         <div class="col-sm-12">
-          <img class="img-responsive" src="img/placeholder.jpg" alt="Strong Tower Installations">
+          <img class="img-responsive" src="img/stocks/Home_automation_app_1.jpg" alt="Strong Tower Installations">
         </div>
         <div class="col-sm-12">
           <h1>Wifi Solutions</h1>
@@ -201,7 +204,7 @@
         </div>
         <div class="col-sm-8 mobile-tile">
           <div class="col-sm-12">
-            <img class="img-responsive" src="img/placeholder.jpg" alt="Strong Tower Installations">
+            <img class="img-responsive" src="img/stocks/home_automation_app_2.jpg" alt="Strong Tower Installations">
           </div>
           <div class="col-sm-12">
             <h1>Home Automation</h1>
@@ -223,11 +226,11 @@
 
 
   <div class="container desktop-layout">
-    <div class="row desktile">
+    <div class="row desktile" id="tvinstall">
       <div class="col-sm-1">
       </div>
       <div class="col-sm-6">
-        <img class="img-responsive" src="img/placeholder.jpg" alt="Strong Tower Installations">
+        <img class="img-responsive" src="img/stocks/tvmount_install.jpg" alt="Strong Tower Installations">
       </div>
       <div class="col-sm-4">
         <h1>TV Installation</h1>
@@ -241,7 +244,7 @@
       <div class="col-sm-1">
       </div>
     </div>
-    <div class="row desktile odd">
+    <div class="row desktile odd" id="media">
       <div class="col-sm-1">
       </div>
       <div class="col-sm-4">
@@ -254,20 +257,20 @@
         </ul>
       </div>
       <div class="col-sm-6">
-        <img class="img-responsive" src="img/placeholder.jpg" alt="Strong Tower Installations">
+        <img class="img-responsive" src="img/stocks/hometheater_2.jpg" alt="Strong Tower Installations">
       </div>
       <div class="col-sm-1">
       </div>
     </div>
-    <div class="row desktile">
+    <div class="row desktile" id="security">
       <div class="col-sm-1">
       </div>
       <div class="col-sm-6">
-        <img class="img-responsive" src="img/placeholder.jpg" alt="Strong Tower Installations">
+        <img class="img-responsive" src="img/stocks/security_monitoring_app.jpg" alt="Strong Tower Installations">
       </div>
       <div class="col-sm-4">
         <h1>Home security</h1>
-        <p>Home security should be a high priority for any home owner whether you are married, a single parent, or simply need to add an appropriate alarm system for your family’s elders.Home security should be a high priority for any home owner whether you are married, a single parent, or simply need to add an appropriate alarm system for your family’s elders.
+        <p>Home security should be a high priority for any home owner whether you are married, a single parent, or simply need to add an appropriate alarm system for your family’s elders. Home security should be a high priority for any home owner whether you are married, a single parent, or simply need to add an appropriate alarm system for your family’s elders.
         </p>
         <ul>
           <li>Our Home security will give you blah blah, peice of mind, blah blah, maximum comfort, and everything nice in Arizona.
@@ -277,7 +280,7 @@
       <div class="col-sm-1">
       </div>
     </div>
-    <div class="row desktile odd">
+    <div class="row desktile odd" id="cameras">
       <div class="col-sm-1">
       </div>
       <div class="col-sm-4">
@@ -290,16 +293,16 @@
         </ul>
       </div>
       <div class="col-sm-6">
-        <img class="img-responsive" src="img/placeholder.jpg" alt="Strong Tower Installations">
+        <img class="img-responsive" src="img/stocks/cameras_sensors.jpg" alt="Strong Tower Installations">
       </div>
       <div class="col-sm-1">
       </div>
     </div>
-    <div class="row desktile">
+    <div class="row desktile" id="wifi">
       <div class="col-sm-1">
       </div>
       <div class="col-sm-6">
-        <img class="img-responsive" src="img/placeholder.jpg" alt="Strong Tower Installations">
+        <img class="img-responsive" src="img/stocks/Home_automation_app_1.jpg" alt="Strong Tower Installations">
       </div>
       <div class="col-sm-4">
         <h1>Wifi Solutions</h1>
@@ -313,7 +316,7 @@
       <div class="col-sm-1">
       </div>
     </div>
-    <div class="row desktile odd">
+    <div class="row desktile odd" id="automation">
       <div class="col-sm-1">
       </div>
       <div class="col-sm-4">
@@ -326,7 +329,7 @@
         </ul>
       </div>
       <div class="col-sm-6">
-        <img class="img-responsive" src="img/placeholder.jpg" alt="Strong Tower Installations">
+        <img class="img-responsive" src="img/stocks/home_automation_app_2.jpg" alt="Strong Tower Installations">
       </div>
       <div class="col-sm-1">
       </div>
