--- a/public/views/about.html
+++ b/public/views/about.html
@@ -1,8 +1,10 @@
-<section class='hero'>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <h1>WE ARE STRONG TOWER</h1>
+<section class='hero about-img'>
+  <div class="hero-filter">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <h1>WE ARE STRONG TOWER</h1>
+        </div>
       </div>
     </div>
   </div>
