--- a/public/views/home.html
+++ b/public/views/home.html
@@ -100,7 +100,7 @@
       <div class="col-sm-1"></div>
       <div class="col-sm-10 services-pack plugin-container">
         <div class="fbplugin">
-          <div class="fb-page" data-href="https://www.facebook.com/strongtowerinstallations/" data-tabs="timeline" data-width="500" data-small-header="true" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/strongtowerinstallations/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/strongtowerinstallations/">Strong Tower Installations</a></blockquote></div>
+          <div class="fb-page" data-href="https://www.facebook.com/strongtowerinstallations/" data-tabs="timeline" data-height="600" data-width="500" data-small-header="true" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/strongtowerinstallations/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/strongtowerinstallations/">Strong Tower Installations</a></blockquote></div>
         </div>
       </div>
     </div>
