Fix facebook plugin on route change

--- a/public/styles/views/main.scss
+++ b/public/styles/views/main.scss
@@ -242,7 +242,7 @@ hr {
 }
 
 .hero.services-img {
-  background-image: url(../img/stocks/hometheatre_1.jpg);
+  background-image: url(../img/main_services.jpg);
 }
 .hero.contact-img {
   background-image: url(../img/stocks/hometheatre_1.jpg);
@@ -490,8 +490,7 @@ hr {
 .plugin-container {
   display: flex;
   justify-content: center;
-  background: #fff;
-  // border: solid 60px #a7090a;
+  background: #dbd7d4;
   background-image: url("../img/cross-red-black-outline.png");
   background-repeat: no-repeat;
 background-size: contain;
@@ -950,7 +949,7 @@ footer .container {
   .services-pack {
     padding: 50px 14px;
     &.plugin-container {
-      padding: 70px 0 10px;
+      padding: 10px 0 10px;
     }
   }
 
@@ -992,7 +991,7 @@ footer .container {
   .services-pack {
     padding: 50px 14px;
     &.plugin-container {
-      padding: 70px 0 10px;
+      padding: 20px 0 20px;
     }
   }
   .container {
@@ -1015,7 +1014,7 @@ footer .container {
     padding: 50px 0;
 
     &.plugin-container {
-      padding: 70px 0 10px;
+      padding: 30px 0 30px;
     }
   }
   .container {
