--- a/public/views/testimonials.html
+++ b/public/views/testimonials.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h1>TESTIMONIALS</h1>
+          <h1>WHAT PEOPLE ARE SAYING</h1>
         </div>
       </div>
     </div>
@@ -12,7 +12,7 @@
 <section class="services">
   <div class="container">
     <div class="row">
-      <h1 class="section-title-grey">WHAT PEOPLE ARE SAYING</h1>
+      <h1 class="section-title-grey">TESTIMONIALS</h1>
       <hr class="section-hr-grey">
       <div class="review1">
         <div class="widget ng-scope" id="tt-review-widget-one">
